# alef

./: .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .rumdl.toml  .taplo.toml  .typos.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  GEMINI.md  README.md  SECURITY.md  Taskfile.yml  alef.toml  deny.toml  renovate.json  ruff.toml  rust-toolchain.toml
alef-core/: Cargo.toml
alef-core/src/: extension.rs  lib.rs
alef-core/src/extensions/: dylib.rs  template.rs
crates/alef-backend-ffi/: Cargo.toml
crates/alef-backend-ffi/src/: gen_bindings.rs  gen_bridge_field.rs  gen_visitor.rs  lib.rs  template_env.rs  trait_bridge.rs  type_map.rs
crates/alef-backend-ffi/src/gen_bindings/: functions.rs  helpers.rs  mod.rs  types.rs
crates/alef-backend-ffi/src/trait_bridge/: call_body.rs  mod.rs  registration.rs  vtable.rs
crates/alef-backend-ffi/templates/: bridge_struct.jinja  bytes_result_match.jinja  field_accessor_header.jinja  plugin_impl_initialize.jinja  plugin_impl_shutdown.jinja  value_to_c_conversion.jinja  vtable_method_doc_lines.jinja
crates/alef-backend-ffi/tests/: gen_bindings_test.rs
crates/alef-backend-gleam/: Cargo.toml
crates/alef-backend-gleam/benches/: emit.rs
crates/alef-backend-gleam/src/: gen_bindings.rs  lib.rs  template_env.rs  type_map.rs
crates/alef-backend-gleam/src/gen_bindings/: nif_external.rs  trait_bridge.rs
crates/alef-backend-gleam/tests/: gen_bindings_test.rs  snapshot_test.rs
crates/alef-backend-go/: Cargo.toml
crates/alef-backend-go/src/: gen_bindings.rs  gen_visitor.rs  lib.rs  template_env.rs  trait_bridge.rs  type_map.rs
crates/alef-backend-go/src/gen_bindings/: functions.rs  methods.rs  mod.rs  types.rs
crates/alef-backend-go/templates/: enum_marshal_json.jinja  enum_unmarshal_json.jinja  param_named_type.jinja  tagged_union_unmarshal_json_header.jinja
crates/alef-backend-go/tests/: bug_fixes_test.rs  gen_bindings_test.rs
crates/alef-backend-java/: Cargo.toml
crates/alef-backend-java/src/: gen_bindings.rs  gen_visitor.rs  lib.rs  template_env.rs  trait_bridge.rs  type_map.rs
crates/alef-backend-java/src/gen_bindings/: facade.rs  ffi_class.rs  helpers.rs  (+5 more)
crates/alef-backend-java/templates/: bridge_unregister_method.jinja  ffi_async_wrapper.jinja  ffi_catch_block.jinja  ffi_conversion_options_invoke.jinja  ffi_main_class_header.jinja  ffi_null_check.jinja  ffi_try_finally_block_start.jinja  javadoc_lines.jinja  stream_method_named_result.jinja  trait_bridge.jinja  untagged_union_wrapper.jinja
crates/alef-backend-java/tests/: gen_bindings_test.rs  snapshot_test.rs
crates/alef-backend-php/: Cargo.toml
crates/alef-backend-php/src/: gen_bindings.rs  lib.rs  template_env.rs  trait_bridge.rs  type_map.rs
crates/alef-backend-php/templates/: async_method_body.jinja  php_enum_variant_stub.jinja  php_flat_enum_variant_match_empty.jinja  php_impl_from_begin.jinja  php_let_binding_vec_named.jinja  php_let_binding_vec_named_optional.jinja  php_property_stub.jinja  php_static_method_definition_no_params.jinja  php_static_method_definition_with_params.jinja  php_vec_named_struct_let_binding.jinja  php_visit_result_with_template.jinja
crates/alef-backend-php/tests/: gen_bindings_test.rs
crates/alef-backend-rustler/: Cargo.toml
crates/alef-backend-rustler/src/: gen_bindings.rs  lib.rs  template_env.rs  trait_bridge.rs  type_map.rs
crates/alef-backend-rustler/tests/: gen_public_api_test.rs  trait_bridge_test.rs
crates/alef-backend-swift/: Cargo.toml
crates/alef-backend-swift/benches/: emit.rs
crates/alef-backend-swift/src/: gen_bindings.rs  gen_rust_crate.rs  lib.rs  template_env.rs  type_map.rs
crates/alef-backend-swift/templates/: default_field_string_like_optional_serde.jinja  default_field_string_like_serde.jinja  enum_from_impl_header.jinja  enum_from_variant.jinja  error_case.jinja  error_case_with_data.jinja  extern_fn_new.jinja  getter_bytes.jinja  getter_json_bridge.jinja  getter_named.jinja  getter_optional_bytes.jinja  getter_optional_named.jinja  getter_serde.jinja  getter_simple_clone.jinja  getter_string_like_debug.jinja  getter_string_like_debug_optional.jinja  getter_string_like_serde.jinja  getter_string_like_serde_optional.jinja  getter_vec_named.jinja  getter_vec_named_optional.jinja  getter_vec_primitive_serde_optional.jinja
crates/alef-backend-swift/tests/: gen_bindings_test.rs  gen_rust_crate_test.rs  snapshot_test.rs
crates/alef-e2e/: Cargo.toml
crates/alef-e2e/schema/: fixture.schema.json
crates/alef-e2e/src/: field_access.rs  fixture.rs  lib.rs  template_env.rs  validate.rs
crates/alef-e2e/tests/: c_result_type_name.rs  cargo_toml_generation.rs  elixir_keyword_opts_threshold.rs  elixir_unused_variable_prefix.rs  field_path_array.rs  go_scalar_return_handling.rs  java_from_json_codegen.rs  java_json_object_arg_with_value.rs  kotlin_android_codegen.rs  rust_call_overrides.rs  rust_no_unused_imports.rs  swift_client_factory.rs  validation_error_wrapping.rs  wasm_language_auto_skip.rs  zig_addtest_use_llvm_install.rs
crates/skif-adapters/: Cargo.toml
crates/skif-adapters/src/: async_method.rs  callback_bridge.rs  lib.rs  streaming.rs  sync_function.rs
crates/skif-backend-ffi/: Cargo.toml
crates/skif-backend-ffi/src/: gen_bindings.rs  lib.rs  type_map.rs
crates/skif-backend-magnus/: Cargo.toml
crates/skif-backend-magnus/src/: gen_bindings.rs  gen_stubs.rs  lib.rs  type_map.rs
crates/skif-backend-napi/: Cargo.toml
crates/skif-backend-napi/src/: gen_bindings.rs  lib.rs  type_map.rs
crates/skif-backend-php/: Cargo.toml
crates/skif-backend-php/src/: gen_bindings.rs  lib.rs  type_map.rs
crates/skif-backend-pyo3/: Cargo.toml
crates/skif-backend-pyo3/src/: gen_bindings.rs  gen_stubs.rs  lib.rs  type_map.rs
crates/skif-backend-rustler/: Cargo.toml
crates/skif-backend-rustler/src/: gen_bindings.rs  lib.rs  type_map.rs
crates/skif-backend-wasm/: Cargo.toml
crates/skif-backend-wasm/src/: gen_bindings.rs  lib.rs  type_map.rs
crates/skif-extract/: Cargo.toml
crates/skif-extract/src/: extractor.rs  lib.rs  type_resolver.rs
(+2564 files in other folders)
