[package]
name = "alef-core"
version = "0.24.17"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/kreuzberg-dev/alef"
homepage = "https://github.com/kreuzberg-dev/alef"
description = "Core extension API for the alef polyglot binding generator"
keywords = ["codegen", "bindings", "ffi", "polyglot"]
categories = ["development-tools::ffi", "development-tools::build-utils"]

[features]
dylib-loader = []

[dependencies]
alef = { path = ".." }
anyhow = "1"
minijinja = "2"
serde = { version = "1", features = ["derive"] }
toml = "1.1"
