[package]
name = "alef-backend-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "C FFI backend for alef"
repository.workspace = true

[dependencies]
alef-adapters = { workspace = true }
alef-codegen = { path = "../alef-codegen" }
alef-core = { workspace = true }
anyhow = { workspace = true }
heck = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
