[package]
name = "alef-backend-gleam"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Gleam backend for alef"
repository.workspace = true
homepage.workspace = true

[dependencies]
alef-codegen = { workspace = true }
alef-core = { workspace = true }
anyhow = { workspace = true }
