[package]
name = "alef-backend-go"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Go (cgo) backend for alef"
repository.workspace = true

[dependencies]
alef-adapters = { workspace = true }
alef-codegen = { path = "../alef-codegen" }
alef-core = { workspace = true }
anyhow = { workspace = true }
heck = { workspace = true }
