[package]
name = "alef-backend-rustler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Elixir (Rustler) backend for alef"
repository.workspace = true

[dependencies]
ahash = { workspace = true }
alef-adapters = { workspace = true }
alef-codegen = { path = "../alef-codegen" }
alef-core = { workspace = true }
anyhow = { workspace = true }
heck = { workspace = true }
