[package]
name = "alef-backend-swift"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Swift backend for alef"
repository.workspace = true
homepage.workspace = true

[dependencies]
alef-codegen = { workspace = true }
alef-core = { workspace = true }
anyhow = { workspace = true }
heck = { workspace = true }
