[package]
name = "alef-e2e"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Fixture-driven e2e test generator for alef"

[dependencies]
alef-core = { workspace = true }
anyhow = { workspace = true }
heck = { workspace = true }
jsonschema = "0.28"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
