[package]
name = "skif-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "FFI adapter pattern generators for skif"
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
skif-core = { workspace = true }
