[package]
name = "skif-backend-napi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Node.js (NAPI-RS) backend for skif"
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
skif-codegen = { path = "../skif-codegen" }
skif-core = { workspace = true }
