[package]
name = "skif-backend-php"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "PHP (ext-php-rs) backend for skif"
repository.workspace = true

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
skif-codegen = { path = "../skif-codegen" }
skif-core = { workspace = true }
