[package]
name = "skif-backend-pyo3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Python (PyO3) backend for skif"
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
skif-codegen = { path = "../skif-codegen" }
skif-core = { workspace = true }
