[package]
name = "skif-backend-rustler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Elixir (Rustler) backend for skif"
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
heck = { workspace = true }
skif-codegen = { path = "../skif-codegen" }
skif-core = { workspace = true }
