[package]
name = "skif-extract"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Rust source extraction for skif"
repository.workspace = true

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
quote = "1"
skif-core = { workspace = true }
syn = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
